@@ -1,5 +1,4 @@
 pragma Warnings (Off);
-with Alire.Index.Example_Dependencies;
 with Alire.Index.Hello;
 
 package Alr.Index is
